# maulwurf

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: tauri--cursor-rules.mdc
dist-exe/: Maulwurf-Installer.msi  README.txt
src/: App.css  App.tsx  NewApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: main.rs
src/components/: logger.ts  tabUtils.ts
src/components/debug/: DebugConsole.css  DebugConsole.tsx
src/components/editor/: CodeEditor.tsx
src/components/fileExplorer/: ContextMenu.css  ContextMenu.tsx  FileExplorer.tsx  FolderItem.tsx
src/components/layout/: FontSizeSelect.css  MainLayout.css  MainLayout.tsx
src/components/tabs/: TabBar.tsx  TabItem.tsx
src/components/timeline/: Timeline.tsx  TimelineItem.tsx
src/contexts/: AppContext.tsx
src/hooks/: useApp.ts  useDebugConsole.ts  useEditor.ts  useFileSystem.ts  useLayout.ts  useLogging.ts  useTabs.ts  useTimeline.ts  useToast.ts
src/types/: index.ts
src/utils/: fileUtils.ts  gcodeDefinitions.ts  toastUtils.ts
